--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "1. Create basic files for a website     1. HTML file with Bootstrap container and slider     2. JS file which imports bootstrap and scss     3. SCSS file which imports stylings from bootstrap 2. Setup Parcel JS     1. Init npm     2. Install parcel bundler as dev dependency     3. Install bootstrap jquery and popper.js as dependency 3. Build and watch assets     1. Add scripts for dev and prod 4. Deploy to production     1. Create new netlify account/ new site on netlify     2. Connect to github repo     3. Deploy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/index.html",
+    "build-prod": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.10"
   }
 }
